CDS dump crashes at ConstantPool::resolve_class_constants

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • b31
    • Verified

      At CDS dump time, if there is any class failed verification, dumping crashes at ConstantPool::resolve_class_constants.

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f6e9eb85790, pid=54, tid=55
      #
      # JRE version: (10.0) (build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (10-internal+0-2017-08-21-2307001.root.jdk10, interpreted mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x67d790] ConstantPool::resolve_class_constants(Thread*)+0x1d0
      #

            Assignee:
            Jiangli Zhou
            Reporter:
            Jiangli Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: