8186789: CDS dump crashes at ConstantPool::resolve_class_constants

ConstantPool::resolve_class_constants needs to check for NULL _cache.

Reviewed-by: sspitsyn, coleenp, iklam